2001-11-23  Per Bothner  <per@bothner.com>

	* kawa/lang/Lambda.java (rewriteBody):  Call setReturnType.

	* kawa/lang/AutoloadSyntax.java, kawa/lang/Lambda.java,
	kawa/lang/Macro.java:  Change errors message to use 'name' not `name'.

2001-11-19  Per Bothner  <per@bothner.com>

	* kawa/standard/call_with_values.java (apply):  Use CallContext's
	getArgs method.  Fixes testsuite regression.

2001-11-18  Per Bothner  <per@bothner.com>

	Add support building Kawa using Ant, contributed by Jim White
	with some hacking by yours truly.
	* build.xml:  New file, with build rules for Ant,
	* build.properties:  New file, with comment-out settable properties.
	* Makefile.am (EXTRA_DIST):  Add build.xml and build.properties.
	* configure.in (AC_OUTPUT):  Also make gnu/kawa/ant/Makefile.

2001-11-18  Per Bothner  <per@bothner.com>

	* kawa/standard/define_namespace.java:  Moved to gnu/kawa/xml and
	renamed to DefineNamespace.java.
	* kawa/standard/Makefile,am, kawa/standard/Scheme.java: Update.

2001-11-12  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme):  Define current-error-port.

	* kawa/standard/define_namespace.java (scanForDefinitions):
	Use NamespaceEnv.NAMESPACE_PREFIX

2001-11-05  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (getNamedType):  The type <String>
	is now Type.tostring_type rather than Type.string_type.

	* kawa/standard/Scheme.java (initScheme):  Define let-values
	and let*-values.  [srfi-11]

2001-11-01  Per Bothner  <per@bothner.com>

	* kawa/standard/define_namespace.java:  New class; extends Syntax.
	* kawa/standard/Makefile.am (java_sources0:  Added define_nameapace..
	* kawa/standard/Scheme.java (initScheme):  Define define-namespace.

2001-10-20  Per Bothner  <per@bothner.com>

	* kawa/Shell.java (run):  Use CallContext's runUntilDone, not run.
	(run, runFile):  Catch Throwable, not Exception.
	* kawa/lang/AutoloadProcedure.java, kawa/lang/Eval.java,