@@ -1,3 +1,9 @@
+2001-11-24  Per Bothner  <per@bothner.com>
+
+	* kawa/standard/map.java:  The makeGetField helper methods was moved
+	from Expression to SlotGet.
+	* kawa/lang/Lambda.java: makeCoercion moved from Expression to Convert.
+
 2001-11-23  Per Bothner  <per@bothner.com>
 
 	* kawa/lang/Lambda.java (rewriteBody):  Call setReturnType.
